--- a/dapurputri/bawang.html
+++ b/dapurputri/bawang.html
@@ -4,13 +4,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bawang Goreng Premium | Dapur Putri</title>
-<link rel="stylesheet" href="assets/bawang.css">
 
+<!-- RELATIVE PATH (WAJIB untuk GitHub Pages) -->
+<link rel="stylesheet" href="assets/bawang.css">
 </head>
 <body>
 
 <header class="navbar">
   <div class="container nav-container">
+
     <div class="logo">
       <a href="dapurputri.html">DAPUR PUTRI</a>
     </div>
@@ -25,6 +27,7 @@
     <div class="menu-toggle" id="mobile-menu">
       ☰
     </div>
+
   </div>
 </header>
 
@@ -32,9 +35,12 @@
   <div class="container center">
     <h1>Bawang Goreng Premium</h1>
     <p>
-      Renyah alami, tanpa pahit, dan diproduksi dengan standar kebersihan tinggi.
-      Pelengkap sempurna untuk nasi box, catering, maupun kebutuhan retail.
+      Bukan sekadar pelengkap hidangan. Diproduksi dari bawang pilihan
+      dengan proses penggorengan terkontrol untuk menghasilkan
+      tekstur renyah konsisten, warna keemasan alami,
+      serta aroma bawang yang kuat tanpa rasa pahit.
     </p>
+
     <div class="cta-group">
       <a class="btn btn-primary" href="#kontak">Pesan Sekarang</a>
       <a class="btn btn-secondary" href="dapurputri.html">Kembali ke Beranda</a>
@@ -44,16 +50,16 @@
 
 <section id="tentang" class="section">
   <div class="container narrow">
-    <h2>Diproduksi Secara Selektif</h2>
+    <h2>Standar Produksi Terjaga</h2>
     <p>
-      Bawang goreng kami menggunakan bawang pilihan dengan kadar air optimal
-      sehingga menghasilkan tekstur renyah konsisten. Proses penggorengan
-      dilakukan dengan suhu terkontrol untuk menjaga warna keemasan alami
-      serta meminimalkan rasa pahit.
+      Setiap batch diproduksi dalam jumlah terkontrol untuk memastikan
+      kualitas tetap konsisten. Ketebalan irisan dijaga presisi agar
+      kematangan merata dan tidak menyisakan bagian gosong.
     </p>
     <p>
-      Setiap batch diproduksi dalam jumlah terkontrol untuk menjaga kualitas,
-      bukan produksi massal tanpa kontrol mutu.
+      Proses penggorengan dilakukan dengan suhu stabil
+      untuk menjaga kerenyahan lebih lama tanpa ketergantungan
+      bahan tambahan berlebih.
     </p>
   </div>
 </section>
@@ -61,24 +67,21 @@
 <section id="keunggulan" class="section alt">
   <div class="container">
     <h2>Keunggulan Produk</h2>
+
     <div class="grid-3">
       <div class="card">
         <h3>Renyah Tahan Lama</h3>
-        <p>
-          Dikemas dengan teknik yang menjaga kerenyahan tanpa bahan pengawet.
-        </p>
+        <p>Dikemas untuk menjaga tekstur tetap stabil saat distribusi.</p>
       </div>
+
       <div class="card">
-        <h3>Aroma Alami</h3>
-        <p>
-          Tanpa campuran tepung berlebih sehingga aroma bawang tetap dominan.
-        </p>
+        <h3>Aroma Bawang Dominan</h3>
+        <p>Tanpa campuran tepung berlebih sehingga rasa tetap autentik.</p>
       </div>
+
       <div class="card">
-        <h3>Cocok untuk Catering</h3>
-        <p>
-          Ideal untuk nasi box, prasmanan, dan kebutuhan dapur profesional.
-        </p>
+        <h3>Cocok untuk Catering & Retail</h3>
+        <p>Ideal untuk nasi box premium, prasmanan, maupun penjualan ulang.</p>
       </div>
     </div>
   </div>
@@ -88,8 +91,9 @@
   <div class="container narrow">
     <h2>Pemesanan & Distribusi</h2>
     <p>
-      Tersedia untuk pembelian retail maupun partai besar untuk kebutuhan
-      usaha catering dan restoran.
+      Tersedia untuk pembelian retail maupun partai besar.
+      Hubungi kami untuk kebutuhan suplai rutin usaha catering
+      dan restoran.
     </p>
 
     <div class="cta-group">
@@ -110,10 +114,12 @@
 
 <footer class="footer">
   <div class="container center">
-    <p>© 2025 Dapur Putri. Produk berkualitas untuk kebutuhan premium.</p>
+    <p>© <span id="year"></span> Dapur Putri. Produk berkualitas untuk kebutuhan premium.</p>
   </div>
 </footer>
 
-<script src="dapurputri.js"></script>
+<!-- RELATIVE JS PATH -->
+<script src="assets/bawang.js"></script>
+
 </body>
 </html>
