--- a/dapurputri/bawang.html
+++ b/dapurputri/bawang.html
@@ -6,7 +6,7 @@
 <title>Bawang Goreng Premium | Dapur Putri</title>
 
 <!-- RELATIVE PATH (WAJIB untuk GitHub Pages) -->
-<link rel="stylesheet" href="assets/bawang.css">
+<link rel="stylesheet" href="/dapurputri/assets/bawang.css">
 </head>
 <body>
 
