--- a/dapurputri/bawang.html
+++ b/dapurputri/bawang.html
@@ -1,100 +1,136 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bawang Goreng Premium | Dapur Putri</title>
-
-<link rel="stylesheet" href="/dapurputri/assets/bawang.css?v=4">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bawang Goreng Premium — Dapur Putri</title>
+  <meta name="description" content="Bawang goreng premium dengan standar produksi terukur untuk kebutuhan catering dan retail." />
+  <link rel="stylesheet" href="/dapurputri/assets/dapurputri.css?v=2" />
 </head>
+
 <body>
 
-<!-- TOPBAR -->
 <header class="topbar">
   <div class="container topbar-inner">
-
     <div class="brand">
-      <strong>Dapur Putri</strong>
-      <small>Professional Catering Service</small>
+      <img src="/dapurputri/assets/dapurputrilogo.png" alt="Logo">
+      <div>
+        <strong>Dapur Putri</strong>
+        <small>Professional Catering Service</small>
+      </div>
     </div>
 
     <nav class="desktop-nav">
       <a href="dapurputri.html">Beranda</a>
-      <a href="#tentang">Tentang</a>
+      <a href="#standar">Standar</a>
       <a href="#keunggulan">Keunggulan</a>
-      <a href="#kontak">Pesan</a>
+      <a href="#aplikasi">Aplikasi</a>
+      <a href="#kontak">Kontak</a>
     </nav>
 
+    <a class="btn btn-primary" href="https://wa.me/6285186660020" target="_blank">
+      Konsultasi
+    </a>
   </div>
 </header>
 
-<!-- HERO -->
 <section class="hero">
   <div class="container hero-wrap">
-    <h1>Bawang Goreng Premium</h1>
-    <p>
-      Bukan sekadar pelengkap hidangan. Diproduksi dari bawang pilihan
-      dengan proses penggorengan terkontrol untuk menghasilkan
-      tekstur renyah konsisten, warna keemasan alami,
-      serta aroma bawang yang kuat tanpa rasa pahit.
-    </p>
+    <div class="hero-left">
 
-    <div class="cta-group">
-      <a class="btn btn-primary" href="#kontak">Pesan Sekarang</a>
-      <a class="btn btn-secondary" href="dapurputri.html">Kembali ke Beranda</a>
+      <h1>Bawang Goreng Premium<br>Dengan Standar Produksi Terukur</h1>
+
+      <p>
+        Produk bawang goreng Dapur Putri dirancang bukan sekadar sebagai pelengkap,
+        tetapi sebagai elemen peningkat kualitas sajian. Diproduksi dari bahan baku
+        terpilih dengan kontrol suhu dan waktu penggorengan yang stabil untuk
+        menghasilkan warna keemasan konsisten, tekstur renyah, serta aroma bawang
+        yang bersih tanpa rasa pahit.
+      </p>
+
+      <div class="hero-cta">
+        <a class="btn btn-primary" href="#kontak">Pesan Sekarang</a>
+        <a class="btn" href="#keunggulan">Lihat Keunggulan</a>
+        <a class="btn btn-secondary" href="dapurputri.html">Kembali ke Beranda</a>
+      </div>
+
+      <div class="hero-trust">
+        <div>✔ Irisan Presisi & Konsisten</div>
+        <div>✔ Tanpa Campuran Berlebih</div>
+        <div>✔ Cocok untuk Catering & Retail</div>
+      </div>
+
     </div>
   </div>
 </section>
 
-<!-- TENTANG -->
-<section id="tentang" class="section">
+<section id="standar" class="section alt">
   <div class="container narrow">
-    <h2>Standar Produksi Terjaga</h2>
+    <h2>Standar Produksi</h2>
     <p>
-      Setiap batch diproduksi dalam jumlah terkontrol untuk memastikan
-      kualitas tetap konsisten. Ketebalan irisan dijaga presisi agar
-      kematangan merata dan tidak menyisakan bagian gosong.
+      Setiap batch diproses dalam volume terkontrol untuk menjaga stabilitas hasil.
+      Ketebalan irisan dijaga presisi agar tingkat kematangan merata dan tidak
+      menyisakan bagian gosong.
     </p>
     <p>
-      Proses penggorengan dilakukan dengan suhu stabil
-      untuk menjaga kerenyahan lebih lama tanpa ketergantungan
-      bahan tambahan berlebih.
+      Sistem penggorengan menggunakan suhu terukur sehingga kadar minyak
+      terkendali dan kerenyahan dapat bertahan lebih lama selama distribusi.
     </p>
   </div>
 </section>
 
-<!-- KEUNGGULAN -->
-<section id="keunggulan" class="section alt">
+<section id="keunggulan" class="section">
   <div class="container">
     <h2>Keunggulan Produk</h2>
 
     <div class="grid">
+
       <div class="card">
-        <h3>Renyah Tahan Lama</h3>
-        <p>Dikemas untuk menjaga tekstur tetap stabil saat distribusi.</p>
+        <h4>Renyah Stabil</h4>
+        <p>
+          Tekstur tetap konsisten bahkan setelah penyimpanan,
+          ideal untuk kebutuhan catering skala besar.
+        </p>
       </div>
 
       <div class="card">
-        <h3>Aroma Bawang Dominan</h3>
-        <p>Tanpa campuran tepung berlebih sehingga rasa tetap autentik.</p>
+        <h4>Aroma Dominan & Bersih</h4>
+        <p>
+          Tanpa campuran tepung berlebih sehingga karakter bawang
+          tetap terasa kuat dan autentik.
+        </p>
       </div>
 
       <div class="card">
-        <h3>Cocok untuk Catering & Retail</h3>
-        <p>Ideal untuk nasi box premium, prasmanan, maupun penjualan ulang.</p>
+        <h4>Siap Distribusi</h4>
+        <p>
+          Dikemas untuk menjaga kualitas selama pengiriman
+          dan penyimpanan di outlet maupun dapur produksi.
+        </p>
       </div>
+
     </div>
   </div>
 </section>
 
-<!-- KONTAK -->
-<section id="kontak" class="section">
+<section id="aplikasi" class="section alt">
+  <div class="container narrow">
+    <h2>Aplikasi Produk</h2>
+    <p>
+      Bawang goreng premium ini dirancang untuk meningkatkan nilai sajian
+      pada nasi box korporat, prasmanan formal, maupun penjualan retail.
+      Stabilitas rasa dan tekstur menjadikannya cocok untuk suplai rutin
+      usaha catering, restoran, hingga reseller.
+    </p>
+  </div>
+</section>
+
+<section id="kontak" class="section center">
   <div class="container narrow">
     <h2>Pemesanan & Distribusi</h2>
     <p>
       Tersedia untuk pembelian retail maupun partai besar.
-      Hubungi kami untuk kebutuhan suplai rutin usaha catering
-      dan restoran.
+      Hubungi kami untuk kebutuhan suplai rutin.
     </p>
 
     <div class="cta-group">
@@ -115,9 +151,19 @@
 
 <footer>
   <div class="container">
-    <p>© <span id="year"></span> Dapur Putri. Produk berkualitas untuk kebutuhan premium.</p>
+    © <span id="year"></span> Dapur Putri — Professional Catering Service
   </div>
 </footer>
 
+<a href="https://wa.me/6285186660020" class="floating-wa" target="_blank">WA</a>
+
+<div class="bottom-nav">
+  <a data-target="standar">🏭</a>
+  <a data-target="keunggulan">⭐</a>
+  <a data-target="aplikasi">📦</a>
+  <a data-target="kontak">📲</a>
+</div>
+
+<script src="/dapurputri/assets/dapurputri.js"></script>
 </body>
 </html>
