--- a/dapurputri/bawang.html
+++ b/dapurputri/bawang.html
@@ -1,169 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bawang Goreng Premium — Dapur Putri</title>
-  <meta name="description" content="Bawang goreng premium dengan standar produksi terukur untuk kebutuhan catering dan retail." />
-  <link rel="stylesheet" href="/dapurputri/assets/dapurputri.css?v=2" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bawang Goreng & Mentah - Dapur Putri</title>
+  <link rel="stylesheet" href="bawang.css">
 </head>
-
 <body>
 
-<header class="topbar">
-  <div class="container topbar-inner">
-    <div class="brand">
-      <img src="/dapurputri/assets/dapurputrilogo.png" alt="Logo">
-      <div>
-        <strong>Dapur Putri</strong>
-        <small>Professional Catering Service</small>
-      </div>
-    </div>
+  <!-- HEADER -->
+  <header class="header">
+    <h1>Dapur Putri</h1>
+    <p>Bawang Berkualitas Premium</p>
+  </header>
 
-    <nav class="desktop-nav">
-      <a href="dapurputri.html">Beranda</a>
-      <a href="#standar">Standar</a>
-      <a href="#keunggulan">Keunggulan</a>
-      <a href="#aplikasi">Aplikasi</a>
-      <a href="#kontak">Kontak</a>
-    </nav>
-
-    <a class="btn btn-primary" href="https://wa.me/6285186660020" target="_blank">
-      Konsultasi
+  <!-- HERO -->
+  <section class="hero" id="home">
+    <h2>Bawang Goreng Renyah & Bawang Mentah Segar</h2>
+    <p>Kualitas terjamin, cocok untuk rumah tangga & usaha kuliner.</p>
+    <a href="https://wa.me/6285186660020" target="_blank" class="btn-primary">
+      Pesan Sekarang
     </a>
-  </div>
-</header>
+  </section>
 
-<section class="hero">
-  <div class="container hero-wrap">
-    <div class="hero-left">
+  <!-- BAWANG GORENG -->
+  <section class="section" id="goreng">
+    <h2>Bawang Goreng</h2>
+    <div class="grid" id="gorengGrid"></div>
+  </section>
 
-      <h1>Bawang Goreng Premium<br>Dengan Standar Produksi Terukur</h1>
+  <!-- BAWANG MENTAH -->
+  <section class="section" id="mentah">
+    <h2>Bawang Mentah</h2>
+    <div class="grid" id="mentahGrid"></div>
+  </section>
 
-      <p>
-        Produk bawang goreng Dapur Putri dirancang bukan sekadar sebagai pelengkap,
-        tetapi sebagai elemen peningkat kualitas sajian. Diproduksi dari bahan baku
-        terpilih dengan kontrol suhu dan waktu penggorengan yang stabil untuk
-        menghasilkan warna keemasan konsisten, tekstur renyah, serta aroma bawang
-        yang bersih tanpa rasa pahit.
-      </p>
+  <!-- FOOTER -->
+  <footer class="footer">
+    © <span id="year"></span> Dapur Putri
+  </footer>
 
-      <div class="hero-cta">
-        <a class="btn btn-primary" href="#kontak">Pesan Sekarang</a>
-        <a class="btn" href="#keunggulan">Lihat Keunggulan</a>
-        <a class="btn btn-secondary" href="dapurputri.html">Kembali ke Beranda</a>
-      </div>
+  <!-- MOBILE NAV -->
+  <nav class="bottom-nav">
+    <a href="#home" class="nav-link active">Home</a>
+    <a href="#goreng" class="nav-link">Goreng</a>
+    <a href="#mentah" class="nav-link">Mentah</a>
+  </nav>
 
-      <div class="hero-trust">
-        <div>✔ Irisan Presisi & Konsisten</div>
-        <div>✔ Tanpa Campuran Berlebih</div>
-        <div>✔ Cocok untuk Catering & Retail</div>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<section id="standar" class="section alt">
-  <div class="container narrow">
-    <h2>Standar Produksi</h2>
-    <p>
-      Setiap batch diproses dalam volume terkontrol untuk menjaga stabilitas hasil.
-      Ketebalan irisan dijaga presisi agar tingkat kematangan merata dan tidak
-      menyisakan bagian gosong.
-    </p>
-    <p>
-      Sistem penggorengan menggunakan suhu terukur sehingga kadar minyak
-      terkendali dan kerenyahan dapat bertahan lebih lama selama distribusi.
-    </p>
-  </div>
-</section>
-
-<section id="keunggulan" class="section">
-  <div class="container">
-    <h2>Keunggulan Produk</h2>
-
-    <div class="grid">
-
-      <div class="card">
-        <h4>Renyah Stabil</h4>
-        <p>
-          Tekstur tetap konsisten bahkan setelah penyimpanan,
-          ideal untuk kebutuhan catering skala besar.
-        </p>
-      </div>
-
-      <div class="card">
-        <h4>Aroma Dominan & Bersih</h4>
-        <p>
-          Tanpa campuran tepung berlebih sehingga karakter bawang
-          tetap terasa kuat dan autentik.
-        </p>
-      </div>
-
-      <div class="card">
-        <h4>Siap Distribusi</h4>
-        <p>
-          Dikemas untuk menjaga kualitas selama pengiriman
-          dan penyimpanan di outlet maupun dapur produksi.
-        </p>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<section id="aplikasi" class="section alt">
-  <div class="container narrow">
-    <h2>Aplikasi Produk</h2>
-    <p>
-      Bawang goreng premium ini dirancang untuk meningkatkan nilai sajian
-      pada nasi box korporat, prasmanan formal, maupun penjualan retail.
-      Stabilitas rasa dan tekstur menjadikannya cocok untuk suplai rutin
-      usaha catering, restoran, hingga reseller.
-    </p>
-  </div>
-</section>
-
-<section id="kontak" class="section center">
-  <div class="container narrow">
-    <h2>Pemesanan & Distribusi</h2>
-    <p>
-      Tersedia untuk pembelian retail maupun partai besar.
-      Hubungi kami untuk kebutuhan suplai rutin.
-    </p>
-
-    <div class="cta-group">
-      <a class="btn btn-primary"
-         href="https://wa.me/6285186660020"
-         target="_blank">
-         Pesan via WhatsApp
-      </a>
-
-      <a class="btn btn-secondary"
-         href="https://gofood.link/a/KHS6rGQ"
-         target="_blank">
-         Pesan via GoFood
-      </a>
-    </div>
-  </div>
-</section>
-
-<footer>
-  <div class="container">
-    © <span id="year"></span> Dapur Putri — Professional Catering Service
-  </div>
-</footer>
-
-<a href="https://wa.me/6285186660020" class="floating-wa" target="_blank">WA</a>
-
-<div class="bottom-nav">
-  <a data-target="standar">🏭</a>
-  <a data-target="keunggulan">⭐</a>
-  <a data-target="aplikasi">📦</a>
-  <a data-target="kontak">📲</a>
-</div>
-
-<script src="/dapurputri/assets/dapurputri.js"></script>
+  <script src="bawang.js"></script>
 </body>
 </html>
