--- a/dapurputri/bawang.html
+++ b/dapurputri/bawang.html
@@ -11,33 +11,63 @@
   <!-- HEADER -->
   <header class="header">
     <h1>Dapur Putri</h1>
-    <p>Bawang Berkualitas Premium</p>
+    <p class="tagline">
+      Penyedia bawang berkualitas untuk kebutuhan rumah tangga dan usaha kuliner.
+    </p>
   </header>
 
   <!-- HERO -->
   <section class="hero" id="home">
-    <h2>Bawang Goreng Renyah & Bawang Mentah Segar</h2>
-    <p>Kualitas terjamin, cocok untuk rumah tangga & usaha kuliner.</p>
-    <a href="https://wa.me/6285186660020" target="_blank" class="btn-primary">
-      Pesan Sekarang
-    </a>
+    <div class="hero-content">
+      <h2>Bawang Goreng Renyah & Bawang Mentah Segar</h2>
+      <p>
+        Kami menghadirkan bawang pilihan dengan kualitas premium.
+        Diproses higienis, rasa gurih alami, dan cocok digunakan
+        untuk berbagai kebutuhan dapur Anda.
+      </p>
+
+      <p>
+        Tersedia dalam berbagai ukuran kemasan dengan harga yang
+        kompetitif dan kualitas terjamin.
+      </p>
+
+      <a href="https://wa.me/6285186660020"
+         target="_blank"
+         class="btn-primary">
+         Pesan Sekarang via WhatsApp
+      </a>
+    </div>
   </section>
 
   <!-- BAWANG GORENG -->
   <section class="section" id="goreng">
-    <h2>Bawang Goreng</h2>
+    <div class="section-header">
+      <h2>Bawang Goreng</h2>
+      <p>
+        Bawang goreng renyah dengan aroma harum dan rasa gurih alami.
+        Cocok untuk taburan mie ayam, nasi goreng, soto, dan berbagai hidangan lainnya.
+      </p>
+    </div>
+
     <div class="grid" id="gorengGrid"></div>
   </section>
 
   <!-- BAWANG MENTAH -->
   <section class="section" id="mentah">
-    <h2>Bawang Mentah</h2>
+    <div class="section-header">
+      <h2>Bawang Mentah</h2>
+      <p>
+        Bawang mentah segar dengan kualitas pilihan.
+        Ideal untuk bahan dasar masakan rumahan maupun kebutuhan usaha kuliner.
+      </p>
+    </div>
+
     <div class="grid" id="mentahGrid"></div>
   </section>
 
   <!-- FOOTER -->
   <footer class="footer">
-    © <span id="year"></span> Dapur Putri
+    © <span id="year"></span> Dapur Putri. Seluruh hak dilindungi.
   </footer>
 
   <!-- MOBILE NAV -->
