--- a/orderbandara/index.html
+++ b/orderbandara/index.html
@@ -4,48 +4,54 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Order Bandara - Assistenku</title>
+
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+
   <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 
-  <div class="container">
-    <h1>Order Bandara</h1>
-    <p>Tujuan: Bandar Udara Internasional Soekarno-Hatta</p>
+<div class="container">
 
-    <div class="card">
-      <label>Alamat Pickup</label>
-      <input type="text" id="pickup" placeholder="Masukkan alamat lengkap"/>
+  <h1>Order Bandara</h1>
 
-      <label>Jarak (KM)</label>
-      <input type="number" id="distance" placeholder="Contoh: 18.3"/>
-
-      <label>Surge</label>
-      <input type="number" id="surge" value="1.0" step="0.1" min="1" max="1.4"/>
-
-      <button id="calculateBtn">Hitung Harga</button>
-
-      <div id="result" class="result hidden">
-        <h3>Detail Perhitungan</h3>
-        <p>Jarak: <span id="res_distance"></span> KM</p>
-        <p>Base Fare: Rp <span id="res_base"></span></p>
-        <p>Airport Fee: Rp 25.000</p>
-        <p>Surge: x<span id="res_surge"></span></p>
-        <h2>Total: Rp <span id="res_total"></span></h2>
-      </div>
-
-      <button id="waBtn" class="wa hidden">Pesan via WhatsApp</button>
-
-      <div class="disclaimer">
-        <p>
-          Harga berlaku untuk tujuan yang telah dipilih.<br/>
-          Perubahan titik tujuan akan membatalkan harga dan dilakukan perhitungan ulang.<br/>
-          Pastikan tujuan Anda sudah benar sebelum melanjutkan.
-        </p>
-      </div>
-    </div>
+  <div class="mode-selector">
+    <label><input type="radio" name="mode" value="airport" checked> Airport Mode</label>
+    <label><input type="radio" name="mode" value="custom"> Custom Mode</label>
   </div>
 
-<script src="js/config.js"></script>
+  <div id="terminalSelect">
+    <label>Pilih Terminal:</label>
+    <select id="terminal">
+      <option value="t1">Terminal 1</option>
+      <option value="t2">Terminal 2</option>
+      <option value="t3">Terminal 3</option>
+    </select>
+  </div>
+
+  <div id="map"></div>
+
+  <div id="calculation" class="hidden">
+    <h3>Detail Perhitungan</h3>
+    <p>Jarak: <span id="distance_km"></span> KM</p>
+    <p>Base Fare: Rp <span id="base_fare"></span></p>
+    <p>Airport Fee: Rp 25.000</p>
+    <p>Surge: x<span id="surge"></span></p>
+    <h2>Total: Rp <span id="final_price"></span></h2>
+  </div>
+
+  <button id="waBtn" class="hidden">Pesan via WhatsApp</button>
+
+  <p class="disclaimer">
+    Harga berlaku untuk tujuan yang telah dipilih.<br/>
+    Perubahan titik tujuan akan membatalkan harga dan dilakukan perhitungan ulang.
+  </p>
+
+</div>
+
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script src="js/app.js"></script>
+
 </body>
 </html>
